@@ -47,6 +47,9 @@ Other changes:
 
  * The <zip> family of tasks has been sped up for bigger archives.
    Bugzilla Report 48755.
+   
+ * Add removeKeepExtension option to NetRexxC task.
+   Bugzilla Report 48788.  
 
 Changes from Ant 1.8.0RC1 TO Ant 1.8.0
 ======================================
